# cmsc320-hw4

./: .gitignore  TransformersProject.ipynb  biased_main.py  data_analytics.py  data_cleaning.py  export_data.py  main.py  model_evaluation.py  pyproject.toml  pytorch_test.py  shell.nix  test.py  tuned_classifier.py
data/: reviewed_professors.parquet
libs/: PlanetTerp.py
