[project]
name = "TransformersProject"
version = "0.1.0"
description = "Homework 4 - Transformers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "numba",
    "tqdm",
    "seaborn",
    "requests",
    "torch",
    "torchvision",
    "transformers[torch]==4.57.3",
    "huggingface",
    "pyarrow",
    "fastparquet",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]